[gd_scene load_steps=12 format=3 uid="uid://c2jwavvf5pqwh"]

[ext_resource type="Script" path="res://enemies/scripts/spawner.gd" id="1_eif13"]
[ext_resource type="Texture2D" uid="uid://dlwo3cl58an6v" path="res://Assets/characters/enemies/bughole.png" id="2_6r7c0"]
[ext_resource type="PackedScene" uid="uid://dmnug2gjghian" path="res://enemies/scenes/redmantits.tscn" id="2_uwrxl"]
[ext_resource type="Script" path="res://Components/Scripts/hitbox_component.gd" id="4_sg817"]
[ext_resource type="Script" path="res://Components/Scripts/health_component.gd" id="5_4tyxi"]
[ext_resource type="AudioStream" uid="uid://dk0nsph4efgww" path="res://Assets/weapons/sfx/sand_step-87182.mp3" id="6_3x6x7"]
[ext_resource type="AudioStream" uid="uid://bbki270xygoet" path="res://Assets/weapons/sfx/exploding-building-2-190092.mp3" id="6_6c1va"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q5bnf"]
radius = 56.7646

[sub_resource type="Animation" id="Animation_ahu70"]
resource_name = "colapse"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.577121, 0.589286), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 4.73333, 4.93333),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"stop_timer"
}, {
"args": [],
"method": &"count_hole_destroyed"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.111717, 0.211717, 0.311717, 0.411717, 0.511717, 0.611717, 0.711717, 0.811717, 0.911717, 1.01172, 1.11172, 1.21172, 1.31172, 1.41172, 1.51172, 1.61172, 1.71172, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.78828, 4.88828, 4.98828, 5.08828, 5.18828, 5.28828, 5.38828, 5.48828, 5.58828, 5.68828, 5.78828, 5.88828, 5.98828),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(5.00001, 18), Vector2(3.33333, 10), Vector2(3.33333, 20), Vector2(10, 16.6667), Vector2(9.53674e-07, 13.3333), Vector2(3.33333, 3.33333), Vector2(0, 13.3333), Vector2(-6.66667, 16.6667), Vector2(0, 13.3333), Vector2(-6.66667, 10), Vector2(0, 16.6667), Vector2(6.66667, 13.3333), Vector2(10, 0), Vector2(-6.66667, 0), Vector2(-3.33333, -6.66667), Vector2(2.38419e-07, 0), Vector2(3.33333, 10), Vector2(3.33333, 20), Vector2(10, 16.6667), Vector2(9.53674e-07, 13.3333), Vector2(3.33333, 3.33333), Vector2(0, 13.3333), Vector2(-6.66667, 16.6667), Vector2(0, 13.3333), Vector2(-6.66667, 10), Vector2(0, 16.6667), Vector2(6.66667, 13.3333), Vector2(10, 0), Vector2(-6.66667, 0), Vector2(-3.33333, -6.66667), Vector2(2.38419e-07, 0), Vector2(3.33333, 10), Vector2(3.33333, 20), Vector2(10, 16.6667), Vector2(9.53674e-07, 13.3333), Vector2(3.33333, 3.33333), Vector2(0, 13.3333), Vector2(-6.66667, 16.6667), Vector2(0, 13.3333), Vector2(-6.66667, 10), Vector2(0, 16.6667), Vector2(6.66667, 13.3333), Vector2(10, 0), Vector2(-6.66667, 0), Vector2(-3.33333, -6.66667), Vector2(2.38419e-07, 0), Vector2(3.33333, 10), Vector2(3.33333, 20), Vector2(10, 16.6667), Vector2(9.53674e-07, 13.3333), Vector2(3.33333, 3.33333), Vector2(0, 13.3333), Vector2(-6.66667, 16.6667), Vector2(0, 13.3333), Vector2(-6.66667, 10), Vector2(0, 16.6667), Vector2(6.66667, 13.3333), Vector2(10, 0), Vector2(-6.66667, 0), Vector2(-3.33333, -6.66667), Vector2(2.38419e-07, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j18q6"]
_data = {
"colapse": SubResource("Animation_ahu70")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7v5la"]
radius = 1262.31

[node name="spawner" type="Node2D" node_paths=PackedStringArray("spawn_timer", "anim_player", "sprite")]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_eif13")
entity_to_spawn = ExtResource("2_uwrxl")
spawn_timer = NodePath("Timer")
anim_player = NodePath("AnimationPlayer")
sprite = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5.00001, 18)
scale = Vector2(0.577121, 0.589286)
texture = ExtResource("2_6r7c0")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("collision_shape", "health_component", "hit_sound")]
collision_layer = 8
collision_mask = 8
script = ExtResource("4_sg817")
collision_shape = NodePath("CollisionShape2D")
health_component = NodePath("../HealthComponent")
hit_sound = NodePath("../AudioStreamPlayer")
pitch_upper = 0.5
pitch_lower = 1.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(3.33333, -3.33333)
shape = SubResource("CircleShape2D_q5bnf")

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("5_4tyxi")
max_health = 200.0
health = 200.0
entity = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j18q6")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3x6x7")
volume_db = -5.0
pitch_scale = 1.8

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6c1va")
pitch_scale = 1.5

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_7v5la")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="HitboxComponent" to="HitboxComponent" method="_on_area_entered"]
[connection signal="IDIED" from="HealthComponent" to="." method="_on_health_component_idied"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
